# nexor

./: .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md  installation.md  quickstart.md
docs/modules/: api.md  config.md  health.md  infrastructure.md  logging.md  observability.md  utils.md
installation/: index.html
modules/api/: index.html
modules/config/: index.html
modules/health/: index.html
modules/infrastructure/: index.html
modules/logging/: index.html
modules/observability/: index.html
modules/utils/: index.html
quickstart/: index.html
search/: search_index.json
src/nexor/: __init__.py  health.py  logging.py  observability.py  utils.py
src/nexor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nexor/config/: __init__.py  settings.py
src/nexor/infrastructure/: db.py
tests/: test_logging.py  test_observability.py
tests/config/: test_settings.py
tests/integration/: conftest.py  test_db.py
tests/utils/: test_utils.py
