[project]
name = "nexor"
version = "0.1.0"
description = "Shared database and configuration helpers for the FDE services"
authors = [
    { name = "FDE Team", email = "support@riskary.de" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.27.0",
    "sqlmodel>=0.0.27",
    "sqlalchemy>=2.0.18",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.11.0",
    "tenauth @ git+https://github.com/thwolter/fde-tenauth.git@main",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.0",
    "pyrefly>=0.43.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
    "ssort>=0.15.0",
    "typer>=0.20.0",
]
